--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,14 +3,32 @@ name: tests
 on:
   push:
     branches:
-      - main
+      - master
   pull_request:
     branches:
-      - main
+      - master
 
 jobs:
   ci:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:18
+        env:
+          POSTGRES_DB: testing
+          POSTGRES_USER: laravel
+          POSTGRES_PASSWORD: secret
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U laravel" --health-interval=10s --health-timeout=5s --health-retries=5
+    env:
+      DB_CONNECTION: pgsql
+      DB_HOST: 127.0.0.1
+      DB_PORT: 5432
+      DB_DATABASE: testing
+      DB_USERNAME: laravel
+      DB_PASSWORD: secret
 
     steps:
       - name: Checkout
@@ -23,10 +41,10 @@ jobs:
           tools: composer:v2
           coverage: xdebug
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
         with:
-          node-version: '22'
+          bun-version: latest
 
       - name: Install Dependencies
         run: composer install --no-interaction --prefer-dist --optimize-autoloader
@@ -38,13 +56,13 @@ jobs:
         run: php artisan key:generate
 
       - name: Install Node Dependencies
-        run: npm install
+        run: bun install
 
       - name: Build Assets
-        run: npm run build
+        run: bun run -b build
 
       - name: Install Playwright Browsers
-        run: npx playwright install --with-deps
+        run: bunx -b playwright install --with-deps
 
       - name: Rector Cache
         uses: actions/cache@v4
