--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "laravel/boost": "^1.3.0",
         "laravel/pail": "^1.2.3",
         "laravel/pint": "^1.25.1",
+        "laravel/sail": ">=1.46",
         "mockery/mockery": "^1.6.12",
         "nunomaduro/collision": "^8.8.2",
         "pestphp/pest": "^4.1.2",
@@ -43,7 +44,8 @@
     "scripts": {
         "dev": [
             "Composer\\Config::disableProcessTimeout",
-            "npx concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"npm run dev\" --names=server,queue,logs,vite --kill-others"
+            "./vendor/bin/sail up -d",
+            "bunx -bun concurrently -c \"#c4b5fd,#fb7185,#fdba74\" \"sail artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"sail bun run -b dev\" --names=queue,logs,vite"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
@@ -64,18 +66,18 @@
         ],
         "update:requirements": [
             "composer bump",
-            "npx npm-check-updates -u"
+            "bunx -bun npm-check-updates -u"
         ],
         "lint": [
             "rector",
             "pint --parallel",
-            "npm run lint"
+            "bun run -b lint"
         ],
         "test:type-coverage": "pest --type-coverage --min=100",
         "test:lint": [
             "pint --parallel --test",
             "rector --dry-run",
-            "npm run test:lint"
+            "bun run -b test:lint"
         ],
         "test:unit": "pest --parallel --coverage --exactly=100.0",
         "test:types": "phpstan",
