Convert to typescript

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ APP_FALLBACK_LOCALE=en
 APP_FAKER_LOCALE=en_US
 
 APP_MAINTENANCE_DRIVER=cache
-# APP_MAINTENANCE_STORE=database
+APP_MAINTENANCE_STORE=redis
 
 PHP_CLI_SERVER_WORKERS=4
 
