--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "prettier-plugin-tailwindcss": "^0.6.14",
         "tailwindcss": "^4.1.14",
         "vite": "^7.1.9"
+    },
+    "dependencies": {
+        "@types/node": "^24.7.0",
+        "ts-loader": "^9.5.4",
+        "typescript": "^5.9.3"
     }
 }
