--- a/package.json
+++ b/package.json
@@ -4,12 +4,20 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "lint": "prettier --write resources/",
+        "lint": "prettier --write resources/ && eslint --stats --fix resources/",
         "test:lint": "prettier --check resources/"
     },
     "devDependencies": {
+        "@eslint/css": "^0.12.0",
+        "@eslint/js": "^9.37.0",
         "@tailwindcss/vite": "^4.1.14",
         "concurrently": "^9.2.1",
+        "eslint": "^9.37.0",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^6.1.1",
+        "globals": "^16.4.0",
+        "jiti": "^2.6.1",
         "laravel-vite-plugin": "^2.0.1",
         "npm-check-updates": "^19.0.0",
         "playwright": "^1.56.0",
@@ -17,6 +25,7 @@
         "prettier-plugin-organize-imports": "^4.3.0",
         "prettier-plugin-tailwindcss": "^0.6.14",
         "tailwindcss": "^4.1.14",
+        "typescript-eslint": "^8.46.0",
         "vite": "^7.1.9"
     },
     "dependencies": {
