--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
     "license": "MIT",
     "require": {
         "php": "^8.4.0",
-        "inertiajs/inertia-laravel": "^2.0",
+        "inertiajs/inertia-laravel": "^2.0.10",
         "laravel/framework": "^12.33.0",
-        "nunomaduro/essentials": "^1.0.1"
+        "nunomaduro/essentials": "^1.0.1",
+        "spatie/laravel-data": "^4.17.1",
+        "spatie/laravel-typescript-transformer": "^2.5"
     },
     "require-dev": {
         "driftingly/rector-laravel": "^2.0.7",
@@ -59,16 +61,12 @@
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
-        "post-create-project-cmd": [
-            "@php artisan key:generate --ansi",
-            "@php -r \"file_exists('database/database.sqlite') || touch('database/database.sqlite');\"",
-            "@php artisan migrate --graceful --ansi"
-        ],
         "update:requirements": [
             "composer bump",
             "bunx -bun npm-check-updates -u"
         ],
         "lint": [
+            "@generate:typescript-types",
             "rector",
             "pint --parallel",
             "bun run -b lint"
@@ -86,7 +84,8 @@
             "@test:unit",
             "@test:lint",
             "@test:types"
-        ]
+        ],
+        "generate:typescript-types": "@php artisan typescript:transform"
     },
     "extra": {
         "laravel": {
