--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
     "require": {
         "php": "^8.4.0",
         "inertiajs/inertia-laravel": "^2.0.10",
+        "laravel/fortify": "^1.31",
         "laravel/framework": "^12.33.0",
         "nunomaduro/essentials": "^1.0.1",
         "spatie/laravel-data": "^4.17.1",
-        "spatie/laravel-typescript-transformer": "^2.5"
+        "spatie/laravel-typescript-transformer": "^2.5.2"
     },
     "require-dev": {
         "driftingly/rector-laravel": "^2.0.7",
