--- a/package.json
+++ b/package.json
@@ -8,32 +8,34 @@
         "test:lint": "prettier --check resources/"
     },
     "devDependencies": {
-        "@eslint/css": "^0.12.0",
-        "@eslint/js": "^9.37.0",
-        "@tailwindcss/vite": "^4.1.14",
+        "@eslint/css": "^0.14.1",
+        "@eslint/js": "^9.39.1",
+        "@tailwindcss/vite": "^4.1.17",
         "concurrently": "^9.2.1",
-        "eslint": "^9.37.0",
+        "daisyui": "^5.5.5",
+        "eslint": "^9.39.1",
         "eslint-config-prettier": "^10.1.8",
         "eslint-plugin-react": "^7.37.5",
-        "eslint-plugin-react-hooks": "^6.1.1",
-        "globals": "^16.4.0",
+        "eslint-plugin-react-hooks": "^7.0.1",
+        "globals": "^16.5.0",
         "jiti": "^2.6.1",
         "laravel-vite-plugin": "^2.0.1",
-        "npm-check-updates": "^19.0.0",
-        "playwright": "^1.56.0",
+        "npm-check-updates": "^19.1.2",
+        "playwright": "^1.56.1",
         "prettier": "^3.6.2",
         "prettier-plugin-organize-imports": "^4.3.0",
-        "prettier-plugin-tailwindcss": "^0.6.14",
-        "tailwindcss": "^4.1.14",
-        "typescript-eslint": "^8.46.0",
-        "vite": "^7.1.9"
+        "prettier-plugin-tailwindcss": "^0.7.1",
+        "tailwindcss": "^4.1.17",
+        "typescript-eslint": "^8.46.4",
+        "vite": "^7.2.2"
     },
     "dependencies": {
-        "@inertiajs/react": "^2.2.7",
-        "@types/node": "^24.7.0",
-        "@types/react": "^19.2.2",
-        "@types/react-dom": "^19.2.1",
-        "@vitejs/plugin-react": "^5.0.4",
+        "@inertiajs/react": "^2.2.17",
+        "@types/node": "^24.10.1",
+        "@types/react": "^19.2.5",
+        "@types/react-dom": "^19.2.3",
+        "@vitejs/plugin-react": "^5.1.1",
+        "class-variance-authority": "^0.7.1",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "ts-loader": "^9.5.4",
