--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "@vitejs/plugin-react": "^5.1.1",
         "class-variance-authority": "^0.7.1",
         "laravel-react-internationalization": "^3.0.0",
+        "lucide-react": "^0.554.0",
         "react": "^19.2.0",
         "react-dom": "^19.2.0",
         "ts-loader": "^9.5.4",
