--- a/composer.json
+++ b/composer.json
@@ -11,32 +11,34 @@
     "require": {
         "php": "^8.4.0",
         "inertiajs/inertia-laravel": "^2.0.10",
-        "laravel/fortify": "^1.31",
-        "laravel/framework": "^12.33.0",
+        "laravel/fortify": "^1.32.0",
+        "laravel/framework": "^12.39.0",
         "nunomaduro/essentials": "^1.0.1",
-        "spatie/laravel-data": "^4.17.1",
+        "spatie/laravel-csp": "^3.21",
+        "spatie/laravel-data": "^4.18.0",
         "spatie/laravel-typescript-transformer": "^2.5.2"
     },
     "require-dev": {
-        "driftingly/rector-laravel": "^2.0.7",
+        "driftingly/rector-laravel": "^2.1.3",
         "fakerphp/faker": "^1.24.1",
-        "larastan/larastan": "^3.7.2",
+        "larastan/larastan": "^3.8.0",
         "laravel/pail": "^1.2.3",
         "laravel/pint": "^1.25.1",
-        "laravel/sail": ">=1.46",
+        "laravel/sail": ">=1.48.1",
         "mockery/mockery": "^1.6.12",
-        "nunomaduro/collision": "^8.8.2",
-        "pestphp/pest": "^4.1.2",
+        "nunomaduro/collision": "^8.8.3",
+        "pestphp/pest": "^4.1.4",
         "pestphp/pest-plugin-browser": "^4.1.1",
         "pestphp/pest-plugin-laravel": "^4.0.0",
-        "pestphp/pest-plugin-type-coverage": "^4.0.2",
-        "rector/rector": "^2.2.1"
+        "pestphp/pest-plugin-type-coverage": "^4.0.3",
+        "rector/rector": "^2.2.8"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Rector\\Custom\\": "rector/Rector/"
         }
     },
     "autoload-dev": {
